# mini-llm-python

./: .gitignore  README.md  pyproject.toml
src/: bootstrap.py  test_notion.py
src/llm_toy/: __init__.py  __main__.py  main.py
src/mcp/: __init__.py  notion_schedule.py
